# intercat

./: CHANGELOG.md  README.md  intercat.cabal
infinicat/cbits/: open.c
infinicat/src/: Main.hs
src/: Main.hs
