cabal-version:       2.4

name:                intercat
version:             0.1.0.0
synopsis:            Interactively cat files to another file
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Alexander Vieth
maintainer:          aovieth@gmail.com
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

executable intercat
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0,
                       bytestring,
                       containers,
                       haskeline >= 0.8.0.0,
                       transformers
  hs-source-dirs:      src
  default-language:    Haskell2010

executable infinicat
  main-is:              Main.hs
  build-depends:       base ^>=4.12.0.0,
                       bytestring
  hs-source-dirs:      infinicat/src
  default-language:    Haskell2010
  ghc-options:         -Wall

